--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,7 +15,43 @@ jobs:
         with:
           filename: metrics.svg
           token: ${{ secrets.GITHUB_TOKEN }}
-          config_order: base, isocalendar, languages
+          config_order: base
           config_timezone: Asia/Shanghai
           base: header, activity, community, repositories
           base_indepth: yes
+  build:
+    needs: github-metrics
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build project
+      run: npm run build
+
+    - name: Upload Pages artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./public
+  deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
