--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,6 +21,7 @@ jobs:
           base_indepth: yes
     
   deploy:
+    needs: github-metrics
     permissions:
       pages: write
       id-token: write
