--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -36,12 +36,10 @@ jobs:
           sparse-checkout: |
             metrics.svg
           sparse-checkout-cone-mode: false
-      - name: Debug
-        run: ls -la
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./lingmo-metrics
+          path: metrics.svg
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
