--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           config_order: base
           config_timezone: Asia/Shanghai
           repositories_skipped: Lingmo-OS, kernel, linux-kernel-6.8.7, lingmo-linux-kernel-6.8.4, lingmo-grub2, libx11, lingmo-wine, NextOS, lingmo-community, lingmo-system-build
