--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,10 +20,10 @@ jobs:
           config_timezone: Asia/Shanghai
           base: header, activity, community, repositories
           base_indepth: yes
+          repositories_skipped: Lingmo-OS, kernel, linux-kernel-6.8.7, lingmo-linux-kernel-6.8.4, lingmo-grub2, libx11, lingmo-wine, NextOS, lingmo-community, lingmo-system-build
           plugin_languages: yes
           plugin_languages_categories: markup, programming
           plugin_languages_details: percentage, bytes-size, lines
-          plugin_languages_ignored: Lingmo-OS, kernel, linux-kernel-6.8.7, lingmo-linux-kernel-6.8.4, lingmo-grub2, libx11, lingmo-wine, NextOS, lingmo-community, lingmo-system-build
           plugin_followup: yes
     
   deploy:
