--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,7 +20,7 @@ jobs:
           config_timezone: Asia/Shanghai
           base: header, activity, community, repositories
           base_indepth: yes
-          repositories_skipped: Lingmo-OS, kernel, linux-kernel-6.8.7, lingmo-linux-kernel-6.8.4, lingmo-grub2, libx11, lingmo-wine, NextOS, lingmo-community, lingmo-system-build
+          repositories_skipped: Lingmo-OS, kernel, linux-kernel-6.8.7, lingmo-linux-kernel-6.8.4, lingmo-grub2, libx11, lingmo-wine, NextOS, lingmo-community, lingmo-system-build, pacman, rpm, libsolv, kdeconnect-android, kdeconnect-kde, kdeconnect-meta, extra-cmake-modules, dnf, libdnf
           plugin_languages: yes
           plugin_languages_categories: markup, programming
           plugin_languages_details: percentage, bytes-size, lines
