--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.svg
+          output_action: none
           token: ${{ secrets.GITHUB_TOKEN }}
           user: LingmoOS
           config_order: base
@@ -25,6 +26,9 @@ jobs:
           plugin_languages_categories: markup, programming
           plugin_languages_details: percentage, bytes-size, lines
           plugin_followup: yes
+      - uses: actions/upload-artifact@v4
+        with:
+          path: metrics_renders/metrics.svg
     
   deploy:
     needs: github-metrics
@@ -36,15 +40,11 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: metrics.svg
-          sparse-checkout-cone-mode: false
+      - uses: actions/download-artifact@v4
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: metrics.svg
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
