--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: metrics/metrics.svg
+          path: metrics
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
