--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,7 +19,7 @@ jobs:
           user: LingmoOS
           config_order: base
           config_timezone: Asia/Shanghai
-          repositories_skipped: LingmoOS
+          repositories_skipped: LingmoOS, lingmo-kernel, lingmo-system-build, NextOS, Lingmo-OS, lpm, lpkm
           base: header, activity, community, repositories
           base_indepth: yes
           plugin_languages: yes
